2.2.9 (04/04/2014)

1.  Increased BUFF_SIZE to 1024.
2.  Replaced all access() instances with stat().
3.  The variable stdin may be invalid.

2.2.8 (03/20/2014)

1.  Added umask(~0770) before mkdir() in upload_script.pl.
2.  Corrected permissions in install.pl. User directories should
    only be accessible by the designated Apache account and group.
3.  Guard against empty pointers.
4.  If necessary, provide a successful exit code in install.pl.
5.  Inspect argv[].
6.  Inspect mkdir() and open() results in upload_script.pl.
7.  Provide an exit code in upload_script.pl.
8.  Resized indata from 128 to BUFF_SIZE in display_files.c.
9.  Terminate body and html tags in upload_script.pl whenever harsh
    failures occur.
10  Test $userid in upload_script.pl.
11. Updated the CGI-Upload bundle to version 1.11.

2.2.7 (03/14/2014)

1.  Set fp variables to zero after issuing fclose().

2.2.6 (02/28/2014)

1.  Added the Wformat compiler flag.
2.  Clear buffers prior to issuing snprint().
3.  Corrected printf() formats.
4.  The shell scripts shall exit with success.

2.2.5 (02/06/2014)

1.  Guard against empty pointers.

2.2.4 (02/02/2014)

1.  Corrected arguments to fgets(). (fgets() reads at most size - 1 characters.)
2.  Redefined some integer variables to be of type size_t.

2.2.3 (02/01/2014)

1.  Protect array boundaries.
2.  The function displayFiles() incorrectly assumed that the contents of
    directories remained static. A potential array overflow could occur as
    a result. Corrected.

2.2.2 (09/03/2013)

1.  Added PIE and stack-smashing protection.

2.2.1 (04/09/2012)

1.  Corrected compiler warnings.
2.  Removed compression.

2.2.0 (01/04/2011)

1.  A lint-based release.
2.  Version remains at 2.2.0.

2.2.0 (12/17/2009)

1.  Corrected and simplified the installation.
2.  Improved the install.pl file.
3.  Version remains at 2.2.0.

2.2.0 (11/22/2007)

1.  Enhanced the INSTALL document.
2.  Introduced alternating row colors.