@@ -2,7 +2,9 @@
 
 1.  Increased BUFF_SIZE to 1024.
 2.  Replaced all access() instances with stat().
-3.  The variable stdin may be invalid.
+3.  The displayFiles() function did not properly close
+    the file opened by creat(). Corrected.
+4.  The variable stdin may be invalid.
 
 2.2.8 (03/20/2014)
 
